# markov-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
benches/: benchmarks.rs
benchmarks/: BENCHMARKS.md  RESULTS.md  python_benchmark.py  run_benchmarks.sh
examples/: README.md  basic.rs  combine.rs  compiled.rs  email_generator.rs  file_processing.rs  newline_text.rs  sentence_with_start.rs  serialization.rs  tweet_generator.rs
src/: chain.rs  errors.rs  lib.rs  splitters.rs  text.rs  utils.rs
tests/: test_basic.rs  test_combine.rs  test_splitters.rs
