[package]
name = "markovify-rs"
version = "0.1.1"
edition = "2021"
authors = ["Akin <akinpasha82@gmail.com>"]
description = "A fast, extensible Rust implementation of a Markov chain text generator, inspired by markovify"
license = "MIT"
repository = "https://github.com/akin01/markov-rs"
homepage = "https://github.com/akin01/markov-rs"
documentation = "https://docs.rs/markov-rs"
readme = "README.md"
keywords = ["markov", "text", "generator", "chain", "nlp"]
categories = ["text-processing", "parser-implementations"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md", "examples/**/*", "tests/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"
unicode-segmentation = "1.10"
lazy_static = "1.4"
thiserror = "1.0"
fxhash = "0.2"

[dev-dependencies]
once_cell = "1.19"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
